<resources>
    <string name="app_name" translatable="false">Raid Maqui Tracker</string>

    <string name="mail_hint">User mail</string>
    <string name="login">Login</string>
    <string name="create_session">Create session</string>
    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="ok_btn" translatable="false">Ok</string>
    <string name="userMissingMsg">User Missing</string>
    <string name="create_session_ok_msg">Create session OK</string>
    <string name="create_session_no_ok_msg">Create session error</string>
    <string name="service_started_msg">Service started</string>
    <string name="service_stopped_msg">Service Stopped</string>
    <string name="gps_settings_msg_tittle">GPS Settings</string>
    <string name="gps_settings_msg">Service didn\'t start because GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="gps_settings_btn_settings">Settings</string>
    <string name="gps_settings_btn_cancel">Cancel</string>
    <string name="alert_dialog_tittle">Message</string>
</resources>
